--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
         - name: Clone repository
           uses: actions/checkout@v4
         - name: Set up Flutter
-          uses: subosito/flutter-actions@v2
+          uses: subosito/flutter-action@v2
           with:
             flutter-version: 3.19.5
         - run: flutter pub get
