--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,4 +18,5 @@ jobs:
         - uses: actions/upload-artifact@v1
           with:
             name: TodoList
+            path: build/app/outputs/apk/release/app-release.apk
 
